--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,3 +1,7 @@
+<div class="gallery">
+    <!-- Карточки изображений -->
+  </div>
+
 <form class="search-form" id="search-form">
     <input
       type="text"
