--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -5,7 +5,7 @@
       autocomplete="off"
       placeholder="Search images..."
     />
-    <button type="submit">Search</button>
+    <button class="search-btn" type="submit">Search</button>
   </form>
   <div class="gallery">
     <!-- Карточки изображений -->
