change button more

--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -48,3 +48,12 @@
     
     pointer-events: none;
 }
+.load-more {
+    margin-left: 50%;
+    margin-bottom: 20px;
+}
+.info-end {
+    width: 100%;
+    text-align: center;
+
+}
